bug 523894: wstrings are bad news in OPT builds due to chromium/Mozilla -fshort-wchar mismatch