dom/plugins/PluginThreadChild.cpp
@@ -66,15 +66,27 @@ PluginThreadChild::Init()
 {
     GeckoThread::Init();
 
-    // FIXME/cjones: set up channel stuff, etc.
-    
+    std::string pluginFilename;
+
+#if defined(OS_POSIX)
+    // NB: need to be very careful in ensuring that the first arg
+    // (after the binary name) here is indeed the plugin module path.
+    // Keep in sync with dom/plugins/PluginModuleParent.
+    std::vector<std::string> values = CommandLine::ForCurrentProcess()->argv();
+    NS_ABORT_IF_FALSE(values.size() >= 2, "not enough args");
+
+    pluginFilename = values[1];
+
+#elif defined(OS_WIN)
     std::vector<std::wstring> values =
         CommandLine::ForCurrentProcess()->GetLooseValues();
+    NS_ABORT_IF_FALSE(values.size() >= 1, "not enough loose args");
 
-    // XXX need to handle plugin args!
-    DCHECK(values.size() >= 1);
+    pluginFilename = WideToUTF8(values[0]);
 
-    std::string pluginFilename = WideToUTF8(values[0]);
+#else
+#  error Sorry
+#endif
 
     // FIXME owner_loop() is bad here
     mPlugin.Init(pluginFilename,
